Fix contrast error.

--- a/themes/scss/jqtouch.scss
+++ b/themes/scss/jqtouch.scss
@@ -33,7 +33,7 @@ body {
         );
 
         & > h1 {
-            @include color-by-background($toolbar-background-color, $contrast);
+            @include color-by-background($toolbar-background-color);
         }
     }
 
